syntax = "proto3";
package beads.v1;
option go_package = "github.com/alfredjeanlab/beads/gen/beads/v1;beadsv1";

import "google/protobuf/timestamp.proto";

// Bead is the core work-item record.
message Bead {
  string id = 1;
  string slug = 2;
  string kind = 3;
  string type = 4;
  string title = 5;
  string description = 6;
  string notes = 7;
  string status = 8;
  int32 priority = 9;
  string assignee = 10;
  string owner = 11;
  google.protobuf.Timestamp created_at = 12;
  string created_by = 13;
  google.protobuf.Timestamp updated_at = 14;
  optional google.protobuf.Timestamp closed_at = 15;
  optional google.protobuf.Timestamp due_at = 16;
  optional google.protobuf.Timestamp defer_until = 17;
  bytes fields = 18;
  repeated string labels = 19;
  repeated Dependency dependencies = 20;
  repeated Comment comments = 21;
}

// Dependency represents a directional relationship between two beads.
message Dependency {
  string bead_id = 1;
  string depends_on_id = 2;
  string type = 3;
  google.protobuf.Timestamp created_at = 4;
  string created_by = 5;
  string metadata = 6;
}

// Comment represents a comment on a bead.
message Comment {
  int64 id = 1;
  string bead_id = 2;
  string author = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
}

// Event is a persisted event record.
message Event {
  int64 id = 1;
  string topic = 2;
  string bead_id = 3;
  string actor = 4;
  bytes payload = 5;
  google.protobuf.Timestamp created_at = 6;
}

// Config is a key-value configuration record.
message Config {
  string key = 1;
  bytes value = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}
